
set(QT_USE_OPENGL TRUE)
# -> this will cause cmake to include and link against the OpenGL module
include(${QT_USE_FILE})

INCLUDE_DIRECTORIES(
	   ${QT_INCLUDES}
	   ${QT_QTOPENGL_INCLUDE_DIR}
	   ${QT_QTNETWORK_INCLUDE_DIR}
	   ${QT_QTTEST_INCLUDE_DIR}
		 )


SET (qtvizsrc 	
	baserender.cpp 
	desktopview.cpp
	netwm.cpp
	extensionfactory.cpp
	backdropfactory.cpp
		)

add_library (qtviz SHARED ${qtvizsrc})
QT4_AUTOMOC( ${qtvizsrc}) 

#SET_TARGET_PROPERTIES(plexy
#
#	路       路       PROPERTIES
	#	#	路       路       COMPILE_FLAGS ${CMAKE_SHARED_LIBRARY_CXX_FLAGS})
#

TARGET_LINK_LIBRARIES(
	       qtviz
	       GL
	       ${OPENGL_LIBRARIES}
	       ${QT_QTCORE_LIBRARY}
	       ${QT_QTOPENGL_LIBRARY}
       )

INSTALL(TARGETS qtviz DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
